<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >

		<LinearLayout android:id="@+id/LayoutPrimaryScreen"
		              android:orientation="vertical"
		              android:layout_width="match_parent"
		              android:layout_height="wrap_content" >
		              
				<LinearLayout android:id="@+id/LayoutMenuBar"
		              android:orientation="horizontal"
		              android:layout_width="match_parent"
		              android:layout_height="wrap_content"
		              android:layout_gravity="center_horizontal"
		              android:weightSum="4">
		              
		  				<Button android:id="@+id/MenuButton1"		  				    
		  					android:layout_width="wrap_content"
					        android:layout_height="60dp"
					        android:layout_weight="1"
					        android:text="@string/MenuButton1_name" />
		  				<Button android:id="@+id/MenuButton2"		  				    
		  					android:layout_width="wrap_content"
					        android:layout_height="60dp"
					        android:layout_weight="1"
					        android:text="@string/MenuButton2_name" />
		  				<Button android:id="@+id/MenuButton3"		  				    
		  					android:layout_width="wrap_content"
					        android:layout_height="60dp"
					        android:layout_weight="1"
					        android:text="@string/MenuButton3_name" />
		  				<Button android:id="@+id/MenuButton4"		  				    
		  					android:layout_width="wrap_content"
					        android:layout_height="60dp"
					        android:layout_weight="1"
					        android:text="@string/MenuButton4_name" />
					                      
		  		</LinearLayout>
			  
			  <LinearLayout  android:id="@+id/LayoutContent1"
			      android:layout_height="wrap_content" 
			      android:orientation="vertical" 
			      android:layout_width="match_parent">
			  		
			  </LinearLayout>
			
			      
			  <LinearLayout android:id="@+id/LayoutContent2"
		  		    android:layout_height="wrap_content" 
		  		    android:orientation="vertical" 
		  		    android:layout_width="match_parent">
			    	
			      	  <ScrollView
		   				xmlns:android="http://schemas.android.com/apk/res/android"
		   				android:layout_width="fill_parent"
		   				android:layout_height="fill_parent"
		   				android:padding="10dip">
		   					
		   					<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				    			style="@style/layout_about_vertical"
				    			android:id="@+id/listItems"> 
							</LinearLayout>
							
					  </ScrollView>
			      			  
			  </LinearLayout>
			  
			  <LinearLayout android:id="@+id/LayoutContent3"
		  		    android:layout_height="wrap_content" 
		  		    android:orientation="vertical" 
		  		    android:layout_width="match_parent"> 
		  		    
			      	<TextView					        
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:text="@string/LayoutContent3_title"  />
			      	
			      	
					  <TextView 
					      android:layout_height="wrap_content" 
					      android:text="@string/title_setting_fix_orientation" 
					      android:textColor="#FFFFFF"
					      android:background="#808080" 
					      android:textSize="16dip" 
					      android:layout_width="match_parent"/>
					
					  <RadioGroup 
					      android:layout_width="match_parent" 
					      android:layout_height="wrap_content">
					    	
					    	<RadioButton 
					    	    android:layout_width="wrap_content" 
					    	    android:layout_height="wrap_content" 
					    	    android:id="@+id/RadioNone" 
					    	    android:text="@string/radio_none"/>
					    	
					    	<RadioButton 
					    	    android:layout_width="wrap_content" 
					    	    android:layout_height="wrap_content" 
					    	    android:text="@string/radio_portrait" 
					    	    android:id="@+id/RadioPortrait"/>
					    	
					    	<RadioButton 
					    	    android:layout_width="wrap_content" 
					    	    android:layout_height="wrap_content" 
					    	    android:id="@+id/RadioLandscape" 
					    	    android:text="@string/radio_landscape"/>
					  
					  </RadioGroup>			      	
			      
		  	  </LinearLayout>   
		  		
		  	  <LinearLayout android:id="@+id/LayoutContent4"
		  		    android:layout_height="wrap_content" 
		  		    android:orientation="vertical" 
		  		    android:layout_width="match_parent"> 
		  		    
		  	      	<TextView					        
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:text="@string/LayoutContent4_title"  />
		  	      
		  	  </LinearLayout> 
			  
		</LinearLayout>

		<RelativeLayout android:id="@+id/LayoutSecondaryScreen"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content" >
		  	<!-- -->
		    <view class="com.google.android.maps.MapView"
					android:id="@+id/mapview"
					android:layout_width="fill_parent"
					android:layout_height="match_parent"
					android:clickable="true"
					android:apiKey="0gJXBky7bHrcVTAbKZJ3U3H_800OhSx33jDrNDg" />
		    <!-- -->
		    
		    <!--  
		  	<ImageView 
		  	    android:layout_width="wrap_content" 
		  	    android:layout_height="wrap_content" 
		  	    android:id="@+id/IvSecondary" 
		  	    android:layout_centerInParent="true" 
		  	    android:src="@drawable/fullscreen_portrait"/>
			-->
			
		</RelativeLayout>

</LinearLayout>
